path product
